tradutor.output
Grammar

    0 $accept: programa $end

    1 programa: declaracoes configuracao loop

    2 declaracoes: declaracao
    3            | declaracoes declaracao

    4 declaracao: VAR tipo_declaracao DOIS_PONTOS lista_identificadores PONTO_E_VIRGULA

    5 configuracao: CONFIG comandos FIM

    6 loop: REPITA comandos FIM

    7 comandos: comando
    8         | comandos comando

    9 comando: IDENTIFICADOR IGUALDADE expressao PONTO_E_VIRGULA
   10        | CONFIGURAR IDENTIFICADOR COMO SAIDA PONTO_E_VIRGULA
   11        | CONFIGURAR IDENTIFICADOR COMO ENTRADA PONTO_E_VIRGULA
   12        | CONFIGURAR IDENTIFICADOR COMO ENTRADA_PULLDOWN PONTO_E_VIRGULA
   13        | CONFIGURAR_SERIAL NUM PONTO_E_VIRGULA
   14        | LIGAR IDENTIFICADOR PONTO_E_VIRGULA
   15        | DESLIGAR IDENTIFICADOR PONTO_E_VIRGULA
   16        | ESPERAR NUM PONTO_E_VIRGULA
   17        | IDENTIFICADOR IGUALDADE LER_DIGITAL IDENTIFICADOR PONTO_E_VIRGULA
   18        | IDENTIFICADOR IGUALDADE LER_ANALOGICO IDENTIFICADOR PONTO_E_VIRGULA
   19        | CONFIGURAR_PWM IDENTIFICADOR COM FREQUENCIA NUM RESOLUCAO NUM PONTO_E_VIRGULA
   20        | AJUSTAR_PWM IDENTIFICADOR COM VALOR IDENTIFICADOR PONTO_E_VIRGULA
   21        | AJUSTAR_PWM IDENTIFICADOR COM VALOR NUM PONTO_E_VIRGULA
   22        | SE condicao ENTAO comandos SENAO comandos FIM
   23        | CONECTAR_WIFI IDENTIFICADOR IDENTIFICADOR PONTO_E_VIRGULA
   24        | SE condicao ENTAO comandos FIM
   25        | ENQUANTO condicao comandos FIM
   26        | ESCREVER_SERIAL STRING PONTO_E_VIRGULA
   27        | ESCREVER_SERIAL IDENTIFICADOR PONTO_E_VIRGULA
   28        | IDENTIFICADOR IGUALDADE LER_SERIAL PONTO_E_VIRGULA
   29        | ENVIAR_HTTP STRING STRING PONTO_E_VIRGULA

   30 lista_identificadores: IDENTIFICADOR
   31                      | lista_identificadores VIRGULA IDENTIFICADOR

   32 expressao: IDENTIFICADOR
   33          | NUM
   34          | STRING
   35          | expressao SOMA expressao
   36          | expressao SUBTRACAO expressao
   37          | expressao MULTIPLICACAO expressao
   38          | expressao DIVISAO expressao
   39          | expressao IGUAL expressao
   40          | expressao DIFERENTE expressao
   41          | expressao MENOR expressao
   42          | expressao MAIOR expressao
   43          | expressao MENOR_IGUAL expressao
   44          | expressao MAIOR_IGUAL expressao
   45          | expressao MODULO expressao
   46          | '(' expressao ')'

   47 condicao: expressao IGUAL expressao
   48         | expressao DIFERENTE expressao
   49         | expressao MENOR expressao
   50         | expressao MAIOR expressao
   51         | expressao MENOR_IGUAL expressao
   52         | expressao MAIOR_IGUAL expressao
   53         | expressao MODULO expressao

   54 tipo_declaracao: INTEIRO
   55                | BOOLEANO
   56                | TEXTO


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 46
    ')' (41) 46
    error (256)
    IGUALDADE (258) 9 17 18 28
    SOMA (259) 35
    SUBTRACAO (260) 36
    MULTIPLICACAO (261) 37
    DIVISAO (262) 38
    MODULO (263) 45 53
    IGUAL (264) 39 47
    DIFERENTE (265) 40 48
    MENOR (266) 41 49
    MAIOR (267) 42 50
    MENOR_IGUAL (268) 43 51
    MAIOR_IGUAL (269) 44 52
    IDENTIFICADOR <texto> (270) 9 10 11 12 14 15 17 18 19 20 21 23 27 28 30 31 32
    NUM <num> (271) 13 16 19 21 33
    STRING <texto> (272) 26 29 34
    VAR (273) 4
    CONFIGURAR (274) 10 11 12
    COMO (275) 10 11 12
    SAIDA (276) 10
    LIGAR (277) 14
    DESLIGAR (278) 15
    ESPERAR (279) 16
    INTEIRO (280) 54
    BOOLEANO (281) 55
    TEXTO (282) 56
    CONFIG (283) 5
    REPITA (284) 6
    FIM (285) 5 6 22 24 25
    ENTRADA (286) 11
    CONECTAR_WIFI (287) 23
    LER_DIGITAL (288) 17
    LER_ANALOGICO (289) 18
    CONFIGURAR_PWM (290) 19
    FREQUENCIA (291) 19
    RESOLUCAO (292) 19
    AJUSTAR_PWM (293) 20 21
    VALOR (294) 20 21
    COM (295) 19 20 21
    ENTRADA_PULLDOWN (296) 12
    SE (297) 22 24
    SENAO (298) 22
    ENTAO (299) 22 24
    ENQUANTO (300) 25
    ESCREVER_SERIAL (301) 26 27
    LER_SERIAL (302) 28
    ENVIAR_HTTP (303) 29
    DOIS_PONTOS (304) 4
    PONTO_E_VIRGULA (305) 4 9 10 11 12 13 14 15 16 17 18 19 20 21 23 26 27 28 29
    VIRGULA (306) 31
    CONFIGURAR_SERIAL (307) 13


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    programa <texto> (56)
        on left: 1
        on right: 0
    declaracoes <texto> (57)
        on left: 2 3
        on right: 1 3
    declaracao <texto> (58)
        on left: 4
        on right: 2 3
    configuracao <texto> (59)
        on left: 5
        on right: 1
    loop <texto> (60)
        on left: 6
        on right: 1
    comandos <texto> (61)
        on left: 7 8
        on right: 5 6 8 22 24 25
    comando <texto> (62)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 7 8
    lista_identificadores <texto> (63)
        on left: 30 31
        on right: 4 31
    expressao <texto> (64)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 9 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    condicao <texto> (65)
        on left: 47 48 49 50 51 52 53
        on right: 22 24 25
    tipo_declaracao <texto> (66)
        on left: 54 55 56
        on right: 4


State 0

    0 $accept: . programa $end

    VAR  shift, and go to state 1

    programa     go to state 2
    declaracoes  go to state 3
    declaracao   go to state 4


State 1

    4 declaracao: VAR . tipo_declaracao DOIS_PONTOS lista_identificadores PONTO_E_VIRGULA

    INTEIRO   shift, and go to state 5
    BOOLEANO  shift, and go to state 6
    TEXTO     shift, and go to state 7

    tipo_declaracao  go to state 8


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 9


State 3

    1 programa: declaracoes . configuracao loop
    3 declaracoes: declaracoes . declaracao

    VAR     shift, and go to state 1
    CONFIG  shift, and go to state 10

    declaracao    go to state 11
    configuracao  go to state 12


State 4

    2 declaracoes: declaracao .

    $default  reduce using rule 2 (declaracoes)


State 5

   54 tipo_declaracao: INTEIRO .

    $default  reduce using rule 54 (tipo_declaracao)


State 6

   55 tipo_declaracao: BOOLEANO .

    $default  reduce using rule 55 (tipo_declaracao)


State 7

   56 tipo_declaracao: TEXTO .

    $default  reduce using rule 56 (tipo_declaracao)


State 8

    4 declaracao: VAR tipo_declaracao . DOIS_PONTOS lista_identificadores PONTO_E_VIRGULA

    DOIS_PONTOS  shift, and go to state 13


State 9

    0 $accept: programa $end .

    $default  accept


State 10

    5 configuracao: CONFIG . comandos FIM

    IDENTIFICADOR      shift, and go to state 14
    CONFIGURAR         shift, and go to state 15
    LIGAR              shift, and go to state 16
    DESLIGAR           shift, and go to state 17
    ESPERAR            shift, and go to state 18
    CONECTAR_WIFI      shift, and go to state 19
    CONFIGURAR_PWM     shift, and go to state 20
    AJUSTAR_PWM        shift, and go to state 21
    SE                 shift, and go to state 22
    ENQUANTO           shift, and go to state 23
    ESCREVER_SERIAL    shift, and go to state 24
    ENVIAR_HTTP        shift, and go to state 25
    CONFIGURAR_SERIAL  shift, and go to state 26

    comandos  go to state 27
    comando   go to state 28


State 11

    3 declaracoes: declaracoes declaracao .

    $default  reduce using rule 3 (declaracoes)


State 12

    1 programa: declaracoes configuracao . loop

    REPITA  shift, and go to state 29

    loop  go to state 30


State 13

    4 declaracao: VAR tipo_declaracao DOIS_PONTOS . lista_identificadores PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 31

    lista_identificadores  go to state 32


State 14

    9 comando: IDENTIFICADOR . IGUALDADE expressao PONTO_E_VIRGULA
   17        | IDENTIFICADOR . IGUALDADE LER_DIGITAL IDENTIFICADOR PONTO_E_VIRGULA
   18        | IDENTIFICADOR . IGUALDADE LER_ANALOGICO IDENTIFICADOR PONTO_E_VIRGULA
   28        | IDENTIFICADOR . IGUALDADE LER_SERIAL PONTO_E_VIRGULA

    IGUALDADE  shift, and go to state 33


State 15

   10 comando: CONFIGURAR . IDENTIFICADOR COMO SAIDA PONTO_E_VIRGULA
   11        | CONFIGURAR . IDENTIFICADOR COMO ENTRADA PONTO_E_VIRGULA
   12        | CONFIGURAR . IDENTIFICADOR COMO ENTRADA_PULLDOWN PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 34


State 16

   14 comando: LIGAR . IDENTIFICADOR PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 35


State 17

   15 comando: DESLIGAR . IDENTIFICADOR PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 36


State 18

   16 comando: ESPERAR . NUM PONTO_E_VIRGULA

    NUM  shift, and go to state 37


State 19

   23 comando: CONECTAR_WIFI . IDENTIFICADOR IDENTIFICADOR PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 38


State 20

   19 comando: CONFIGURAR_PWM . IDENTIFICADOR COM FREQUENCIA NUM RESOLUCAO NUM PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 39


State 21

   20 comando: AJUSTAR_PWM . IDENTIFICADOR COM VALOR IDENTIFICADOR PONTO_E_VIRGULA
   21        | AJUSTAR_PWM . IDENTIFICADOR COM VALOR NUM PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 40


State 22

   22 comando: SE . condicao ENTAO comandos SENAO comandos FIM
   24        | SE . condicao ENTAO comandos FIM

    IDENTIFICADOR  shift, and go to state 41
    NUM            shift, and go to state 42
    STRING         shift, and go to state 43
    '('            shift, and go to state 44

    expressao  go to state 45
    condicao   go to state 46


State 23

   25 comando: ENQUANTO . condicao comandos FIM

    IDENTIFICADOR  shift, and go to state 41
    NUM            shift, and go to state 42
    STRING         shift, and go to state 43
    '('            shift, and go to state 44

    expressao  go to state 45
    condicao   go to state 47


State 24

   26 comando: ESCREVER_SERIAL . STRING PONTO_E_VIRGULA
   27        | ESCREVER_SERIAL . IDENTIFICADOR PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 48
    STRING         shift, and go to state 49


State 25

   29 comando: ENVIAR_HTTP . STRING STRING PONTO_E_VIRGULA

    STRING  shift, and go to state 50


State 26

   13 comando: CONFIGURAR_SERIAL . NUM PONTO_E_VIRGULA

    NUM  shift, and go to state 51


State 27

    5 configuracao: CONFIG comandos . FIM
    8 comandos: comandos . comando

    IDENTIFICADOR      shift, and go to state 14
    CONFIGURAR         shift, and go to state 15
    LIGAR              shift, and go to state 16
    DESLIGAR           shift, and go to state 17
    ESPERAR            shift, and go to state 18
    FIM                shift, and go to state 52
    CONECTAR_WIFI      shift, and go to state 19
    CONFIGURAR_PWM     shift, and go to state 20
    AJUSTAR_PWM        shift, and go to state 21
    SE                 shift, and go to state 22
    ENQUANTO           shift, and go to state 23
    ESCREVER_SERIAL    shift, and go to state 24
    ENVIAR_HTTP        shift, and go to state 25
    CONFIGURAR_SERIAL  shift, and go to state 26

    comando  go to state 53


State 28

    7 comandos: comando .

    $default  reduce using rule 7 (comandos)


State 29

    6 loop: REPITA . comandos FIM

    IDENTIFICADOR      shift, and go to state 14
    CONFIGURAR         shift, and go to state 15
    LIGAR              shift, and go to state 16
    DESLIGAR           shift, and go to state 17
    ESPERAR            shift, and go to state 18
    CONECTAR_WIFI      shift, and go to state 19
    CONFIGURAR_PWM     shift, and go to state 20
    AJUSTAR_PWM        shift, and go to state 21
    SE                 shift, and go to state 22
    ENQUANTO           shift, and go to state 23
    ESCREVER_SERIAL    shift, and go to state 24
    ENVIAR_HTTP        shift, and go to state 25
    CONFIGURAR_SERIAL  shift, and go to state 26

    comandos  go to state 54
    comando   go to state 28


State 30

    1 programa: declaracoes configuracao loop .

    $default  reduce using rule 1 (programa)


State 31

   30 lista_identificadores: IDENTIFICADOR .

    $default  reduce using rule 30 (lista_identificadores)


State 32

    4 declaracao: VAR tipo_declaracao DOIS_PONTOS lista_identificadores . PONTO_E_VIRGULA
   31 lista_identificadores: lista_identificadores . VIRGULA IDENTIFICADOR

    PONTO_E_VIRGULA  shift, and go to state 55
    VIRGULA          shift, and go to state 56


State 33

    9 comando: IDENTIFICADOR IGUALDADE . expressao PONTO_E_VIRGULA
   17        | IDENTIFICADOR IGUALDADE . LER_DIGITAL IDENTIFICADOR PONTO_E_VIRGULA
   18        | IDENTIFICADOR IGUALDADE . LER_ANALOGICO IDENTIFICADOR PONTO_E_VIRGULA
   28        | IDENTIFICADOR IGUALDADE . LER_SERIAL PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 41
    NUM            shift, and go to state 42
    STRING         shift, and go to state 43
    LER_DIGITAL    shift, and go to state 57
    LER_ANALOGICO  shift, and go to state 58
    LER_SERIAL     shift, and go to state 59
    '('            shift, and go to state 44

    expressao  go to state 60


State 34

   10 comando: CONFIGURAR IDENTIFICADOR . COMO SAIDA PONTO_E_VIRGULA
   11        | CONFIGURAR IDENTIFICADOR . COMO ENTRADA PONTO_E_VIRGULA
   12        | CONFIGURAR IDENTIFICADOR . COMO ENTRADA_PULLDOWN PONTO_E_VIRGULA

    COMO  shift, and go to state 61


State 35

   14 comando: LIGAR IDENTIFICADOR . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 62


State 36

   15 comando: DESLIGAR IDENTIFICADOR . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 63


State 37

   16 comando: ESPERAR NUM . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 64


State 38

   23 comando: CONECTAR_WIFI IDENTIFICADOR . IDENTIFICADOR PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 65


State 39

   19 comando: CONFIGURAR_PWM IDENTIFICADOR . COM FREQUENCIA NUM RESOLUCAO NUM PONTO_E_VIRGULA

    COM  shift, and go to state 66


State 40

   20 comando: AJUSTAR_PWM IDENTIFICADOR . COM VALOR IDENTIFICADOR PONTO_E_VIRGULA
   21        | AJUSTAR_PWM IDENTIFICADOR . COM VALOR NUM PONTO_E_VIRGULA

    COM  shift, and go to state 67


State 41

   32 expressao: IDENTIFICADOR .

    $default  reduce using rule 32 (expressao)


State 42

   33 expressao: NUM .

    $default  reduce using rule 33 (expressao)


State 43

   34 expressao: STRING .

    $default  reduce using rule 34 (expressao)


State 44

   46 expressao: '(' . expressao ')'

    IDENTIFICADOR  shift, and go to state 41
    NUM            shift, and go to state 42
    STRING         shift, and go to state 43
    '('            shift, and go to state 44

    expressao  go to state 68


State 45

   35 expressao: expressao . SOMA expressao
   36          | expressao . SUBTRACAO expressao
   37          | expressao . MULTIPLICACAO expressao
   38          | expressao . DIVISAO expressao
   39          | expressao . IGUAL expressao
   40          | expressao . DIFERENTE expressao
   41          | expressao . MENOR expressao
   42          | expressao . MAIOR expressao
   43          | expressao . MENOR_IGUAL expressao
   44          | expressao . MAIOR_IGUAL expressao
   45          | expressao . MODULO expressao
   47 condicao: expressao . IGUAL expressao
   48         | expressao . DIFERENTE expressao
   49         | expressao . MENOR expressao
   50         | expressao . MAIOR expressao
   51         | expressao . MENOR_IGUAL expressao
   52         | expressao . MAIOR_IGUAL expressao
   53         | expressao . MODULO expressao

    SOMA           shift, and go to state 69
    SUBTRACAO      shift, and go to state 70
    MULTIPLICACAO  shift, and go to state 71
    DIVISAO        shift, and go to state 72
    MODULO         shift, and go to state 73
    IGUAL          shift, and go to state 74
    DIFERENTE      shift, and go to state 75
    MENOR          shift, and go to state 76
    MAIOR          shift, and go to state 77
    MENOR_IGUAL    shift, and go to state 78
    MAIOR_IGUAL    shift, and go to state 79


State 46

   22 comando: SE condicao . ENTAO comandos SENAO comandos FIM
   24        | SE condicao . ENTAO comandos FIM

    ENTAO  shift, and go to state 80


State 47

   25 comando: ENQUANTO condicao . comandos FIM

    IDENTIFICADOR      shift, and go to state 14
    CONFIGURAR         shift, and go to state 15
    LIGAR              shift, and go to state 16
    DESLIGAR           shift, and go to state 17
    ESPERAR            shift, and go to state 18
    CONECTAR_WIFI      shift, and go to state 19
    CONFIGURAR_PWM     shift, and go to state 20
    AJUSTAR_PWM        shift, and go to state 21
    SE                 shift, and go to state 22
    ENQUANTO           shift, and go to state 23
    ESCREVER_SERIAL    shift, and go to state 24
    ENVIAR_HTTP        shift, and go to state 25
    CONFIGURAR_SERIAL  shift, and go to state 26

    comandos  go to state 81
    comando   go to state 28


State 48

   27 comando: ESCREVER_SERIAL IDENTIFICADOR . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 82


State 49

   26 comando: ESCREVER_SERIAL STRING . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 83


State 50

   29 comando: ENVIAR_HTTP STRING . STRING PONTO_E_VIRGULA

    STRING  shift, and go to state 84


State 51

   13 comando: CONFIGURAR_SERIAL NUM . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 85


State 52

    5 configuracao: CONFIG comandos FIM .

    $default  reduce using rule 5 (configuracao)


State 53

    8 comandos: comandos comando .

    $default  reduce using rule 8 (comandos)


State 54

    6 loop: REPITA comandos . FIM
    8 comandos: comandos . comando

    IDENTIFICADOR      shift, and go to state 14
    CONFIGURAR         shift, and go to state 15
    LIGAR              shift, and go to state 16
    DESLIGAR           shift, and go to state 17
    ESPERAR            shift, and go to state 18
    FIM                shift, and go to state 86
    CONECTAR_WIFI      shift, and go to state 19
    CONFIGURAR_PWM     shift, and go to state 20
    AJUSTAR_PWM        shift, and go to state 21
    SE                 shift, and go to state 22
    ENQUANTO           shift, and go to state 23
    ESCREVER_SERIAL    shift, and go to state 24
    ENVIAR_HTTP        shift, and go to state 25
    CONFIGURAR_SERIAL  shift, and go to state 26

    comando  go to state 53


State 55

    4 declaracao: VAR tipo_declaracao DOIS_PONTOS lista_identificadores PONTO_E_VIRGULA .

    $default  reduce using rule 4 (declaracao)


State 56

   31 lista_identificadores: lista_identificadores VIRGULA . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 87


State 57

   17 comando: IDENTIFICADOR IGUALDADE LER_DIGITAL . IDENTIFICADOR PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 88


State 58

   18 comando: IDENTIFICADOR IGUALDADE LER_ANALOGICO . IDENTIFICADOR PONTO_E_VIRGULA

    IDENTIFICADOR  shift, and go to state 89


State 59

   28 comando: IDENTIFICADOR IGUALDADE LER_SERIAL . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 90


State 60

    9 comando: IDENTIFICADOR IGUALDADE expressao . PONTO_E_VIRGULA
   35 expressao: expressao . SOMA expressao
   36          | expressao . SUBTRACAO expressao
   37          | expressao . MULTIPLICACAO expressao
   38          | expressao . DIVISAO expressao
   39          | expressao . IGUAL expressao
   40          | expressao . DIFERENTE expressao
   41          | expressao . MENOR expressao
   42          | expressao . MAIOR expressao
   43          | expressao . MENOR_IGUAL expressao
   44          | expressao . MAIOR_IGUAL expressao
   45          | expressao . MODULO expressao

    SOMA             shift, and go to state 69
    SUBTRACAO        shift, and go to state 70
    MULTIPLICACAO    shift, and go to state 71
    DIVISAO          shift, and go to state 72
    MODULO           shift, and go to state 91
    IGUAL            shift, and go to state 92
    DIFERENTE        shift, and go to state 93
    MENOR            shift, and go to state 94
    MAIOR            shift, and go to state 95
    MENOR_IGUAL      shift, and go to state 96
    MAIOR_IGUAL      shift, and go to state 97
    PONTO_E_VIRGULA  shift, and go to state 98


State 61

   10 comando: CONFIGURAR IDENTIFICADOR COMO . SAIDA PONTO_E_VIRGULA
   11        | CONFIGURAR IDENTIFICADOR COMO . ENTRADA PONTO_E_VIRGULA
   12        | CONFIGURAR IDENTIFICADOR COMO . ENTRADA_PULLDOWN PONTO_E_VIRGULA

    SAIDA             shift, and go to state 99
    ENTRADA           shift, and go to state 100
    ENTRADA_PULLDOWN  shift, and go to state 101


State 62

   14 comando: LIGAR IDENTIFICADOR PONTO_E_VIRGULA .

    $default  reduce using rule 14 (comando)


State 63

   15 comando: DESLIGAR IDENTIFICADOR PONTO_E_VIRGULA .

    $default  reduce using rule 15 (comando)


State 64

   16 comando: ESPERAR NUM PONTO_E_VIRGULA .

    $default  reduce using rule 16 (comando)


State 65

   23 comando: CONECTAR_WIFI IDENTIFICADOR IDENTIFICADOR . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 102


State 66

   19 comando: CONFIGURAR_PWM IDENTIFICADOR COM . FREQUENCIA NUM RESOLUCAO NUM PONTO_E_VIRGULA

    FREQUENCIA  shift, and go to state 103


State 67

   20 comando: AJUSTAR_PWM IDENTIFICADOR COM . VALOR IDENTIFICADOR PONTO_E_VIRGULA
   21        | AJUSTAR_PWM IDENTIFICADOR COM . VALOR NUM PONTO_E_VIRGULA

    VALOR  shift, and go to state 104


State 68
